src/styles/Roadmap.module.scss
@import "../styles/Breakpoints.module.scss";

.roadMapPage {
  overflow-y: auto;
  height: 86dvh;
  display: flex;
  justify-content: center;
  box-sizing: border-box;

  @include breakpoint-mixin("Tablet") {
    height: 90dvh;
  }

  @include breakpoint-mixin("Laptop_S") {
    height: 86dvh;
  }

  @include breakpoint-mixin("Desktop_M") {
    height: 90dvh;
  }

  @include portrait-min-width-mixin("Vertical_Display") {
    height: 94dvh;
  }

  .roadMapPage_Width {
    height: fit-content;
    display: grid;
    width: 90%;
    overflow-x: hidden;
    height: 100%;
    padding-top: 50px;

    @include breakpoint-mixin("Laptop_S") {
      width: 95%;
    }

    @include breakpoint-mixin("Tablet") {
      gap: 50px;

      grid-template-columns: repeat(
        2,
        1fr
      ); /* Adjust the number of columns as needed */
    }

    @include breakpoint-mixin("Laptop_S") {
      gap: 100px;

      grid-template-columns: repeat(
        4,
        1fr
      ); /* Adjust the number of columns as needed */
    }

    @include portrait-min-width-mixin("Vertical_Display") {
      grid-template-columns: repeat(
        2,
        1fr
      ); /* Adjust the number of columns as needed */
    }

    @include breakpoint-mixin("laptop-wide") {
      grid-template-columns: repeat(
        5,
        1fr
      ); /* Adjust the number of columns as needed */
    }

    @include breakpoint-mixin("Desktop-wide") {
      grid-template-columns: repeat(
        6,
        1fr
      ); /* Adjust the number of columns as needed */
    }
  }
}

.roadMapPage::-webkit-scrollbar {
  height: 100%;
  background-color: rgb(45, 41, 41);
  width: 10px;
}

.roadMapPage::-webkit-scrollbar-thumb {
  background-color: rgba(70, 68, 68, 0.428);
  border: 1px solid transparent;
  background-clip: content-box;
  border-radius: 10px;
  height: 40px;
}

